// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`syncTests > hashModFiles > Exclusions can be overridden by more specific syncPaths 1`] = `
{
  "plugins": {
    "plugins\\OtherMod\\other_mod.dll": {
      "directory": false,
      "hash": "0e1546a7aa36a802e102888baa1681fc",
    },
    "plugins\\OtherMod\\sounds": {
      "directory": true,
      "hash": "",
    },
    "plugins\\file1.dll": {
      "directory": false,
      "hash": "0ce304b7ff04260d67adfdee0af9dd3b",
    },
  },
  "plugins\\ModName\\IncludedSubdir": {
    "plugins\\ModName\\IncludedSubdir\\aFileToInclude": {
      "directory": false,
      "hash": "09d2277efc596b918a7415af7ea34d50",
    },
  },
}
`;

exports[`syncTests > hashModFiles > Should correctly hash a single file 1`] = `
{
  "plugins\\file1.dll": {
    "plugins\\file1.dll": {
      "directory": false,
      "hash": "0ce304b7ff04260d67adfdee0af9dd3b",
    },
  },
}
`;

exports[`syncTests > hashModFiles > Should only hash a given file for one syncPath 1`] = `
{
  "plugins\\": {
    "plugins\\OtherMod\\other_mod.dll": {
      "directory": false,
      "hash": "0e1546a7aa36a802e102888baa1681fc",
    },
    "plugins\\OtherMod\\sounds": {
      "directory": true,
      "hash": "",
    },
  },
  "plugins\\file1.dll": {
    "plugins\\file1.dll": {
      "directory": false,
      "hash": "0ce304b7ff04260d67adfdee0af9dd3b",
    },
  },
}
`;

exports[`syncTests > hashModFiles > should correctly hash folders that didn't exist initially but are created 1`] = `
{
  "plugins": {
    "plugins\\OtherMod\\other_mod.dll": {
      "directory": false,
      "hash": "0e1546a7aa36a802e102888baa1681fc",
    },
    "plugins\\OtherMod\\sounds": {
      "directory": true,
      "hash": "",
    },
    "plugins\\file1.dll": {
      "directory": false,
      "hash": "0ce304b7ff04260d67adfdee0af9dd3b",
    },
  },
  "user\\bananas": {
    "user\\bananas\\test.txt": {
      "directory": false,
      "hash": "047d7c20c1ea6d66718ac45146ab06cd",
    },
  },
}
`;

exports[`syncTests > hashModFiles > should correctly hash multiple folders 1`] = `
{
  "plugins": {
    "plugins\\OtherMod\\other_mod.dll": {
      "directory": false,
      "hash": "0e1546a7aa36a802e102888baa1681fc",
    },
    "plugins\\OtherMod\\sounds": {
      "directory": true,
      "hash": "",
    },
    "plugins\\file1.dll": {
      "directory": false,
      "hash": "0ce304b7ff04260d67adfdee0af9dd3b",
    },
  },
  "user\\mods": {
    "user\\mods\\testMod\\test.ts": {
      "directory": false,
      "hash": "0ed5f429912dfd9fb77009353ab0f889",
    },
  },
}
`;

exports[`syncTests > hashModFiles > should correctly include empty folders 1`] = `
{
  "plugins": {
    "plugins\\OtherMod\\other_mod.dll": {
      "directory": false,
      "hash": "0e1546a7aa36a802e102888baa1681fc",
    },
    "plugins\\OtherMod\\sounds": {
      "directory": true,
      "hash": "",
    },
    "plugins\\file1.dll": {
      "directory": false,
      "hash": "0ce304b7ff04260d67adfdee0af9dd3b",
    },
  },
}
`;

exports[`syncTests > hashModFiles > should hash mod files 1`] = `
{
  "plugins": {
    "plugins\\OtherMod\\other_mod.dll": {
      "directory": false,
      "hash": "0e1546a7aa36a802e102888baa1681fc",
    },
    "plugins\\OtherMod\\sounds": {
      "directory": true,
      "hash": "",
    },
    "plugins\\file1.dll": {
      "directory": false,
      "hash": "0ce304b7ff04260d67adfdee0af9dd3b",
    },
  },
}
`;
